objects/Quote.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>to__c</fullName>
        <description>This fields defines the end of a quote. It is needed for the contract management in Landwehr.
Robin S. 14.10.2019</description>
        <label>to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>from__c</fullName>
        <description>This fields defines the start of the quote. It is needed for the contract management in Landwehr.
Robin S. 14.10.2019</description>
        <label>from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BC_100__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>die Person erhält eine BahnCard 100</inlineHelpText>
        <label>BC 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <inlineHelpText>Notwendige Informationen für die Vertragserstellungen können hier hinterlegt werden. Diese Informationen werden ebenfalls nach L1 übertragen.</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Own_car__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>die Person nutzt ihren eigenen PKW</inlineHelpText>
        <label>Own car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLZArea__c</fullName>
        <label>PLZ Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PLZ_Gebiet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>beschreibt die Station, auf der der Einsatz erfolgen soll</inlineHelpText>
        <label>Station</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anlage_1__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Anforderungsprofile</inlineHelpText>
        <label>Anlage 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Radiuskm__c</fullName>
        <inlineHelpText>definiert das Einsatzgebiet nach dem Umkreis in km um den angegebenen Ort</inlineHelpText>
        <label>Radius km</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Radius_km</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckHUED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check HUED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commision__c</fullName>
        <description>This fields defines commission for a quote. It is needed for the contract management in Landwehr.
Robin S. 14.10.2019</description>
        <label>Commission doctari</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entry_date__c</fullName>
        <inlineHelpText>Vertragsbeginn</inlineHelpText>
        <label>Entry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_car__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>die Person erhält einen Firmenwagen</inlineHelpText>
        <label>Company car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_of__c</fullName>
        <inlineHelpText>definiert die Art des Vertrages, der geschlossen werden soll</inlineHelpText>
        <label>Creation of contract (customer)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANÜ Überlassungsvertrag</fullName>
                </value>
                <value>
                    <fullName>ANÜ Überlassungsvertrag mit ZV doctari</fullName>
                </value>
                <value>
                    <fullName>ANÜ Überlassungsvertrag mit ZV Kunde</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag ANÜ Überlassungsvertrag</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag ANÜ Überlassungsvertrag mit ZV doctari</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag ANÜ Überlassungsvertrag mit ZV Kunde</fullName>
                </value>
                <value>
                    <fullName>Verlängerungsvertrag ANÜ Überlassungsvertrag</fullName>
                </value>
                <value>
                    <fullName>Verlängerungsvertrag ANÜ Überlassungsvertrag mit ZV doctari</fullName>
                </value>
                <value>
                    <fullName>Verlängerungsvertrag ANÜ Überlassungsvertrag mit ZV Kunde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstSigned__c</fullName>
        <label>FirstSigned</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FirstSigned</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_rate__c</fullName>
        <inlineHelpText>Brutto-Verdienst pro Stunde in €</inlineHelpText>
        <label>Hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HoursPerDay__c</fullName>
        <description>This fields defines the hours per day for a quote, by dividing the hours per week through 5 days.</description>
        <formula>WorkingHoursPerWeek__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Arbeitsstunden pro Woche / 5</inlineHelpText>
        <label>Hours per day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValueOfADay__c</fullName>
        <description>Calculates by multiplying the hourly rate with the hours per day</description>
        <formula>Hourly_rate__c *  HoursPerDay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Stundensatz * h/Tag</inlineHelpText>
        <label>Value of a day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Betrag_Kunde__c</fullName>
        <label>Amount customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CourierOrder__c</fullName>
        <inlineHelpText>Information für die Vertragsabteilung, ob ein Kurier benötigt wird.</inlineHelpText>
        <label>Courier Order</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CourierOrder</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Rechtsträger</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Legal Entity)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecruitingAs__c</fullName>
        <inlineHelpText>Berufsbezeichnung entsprechend Urkunde/Qualifikationsnachweis, die sich aus der Kompetenz der Person ergibt; diese kann bearbeitet werden</inlineHelpText>
        <label>Recruiting As</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPRentalFree__c</fullName>
        <description>Uses Hourly Rate and Hours per Day to calculate the rental free value</description>
        <formula>Hourly_rate__c * HoursPerDay__c * 0.6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tagespauschale, die das Personal pro Tag erhält, sofern er/sie nicht im Kundeneinsatz ist</inlineHelpText>
        <label>TP Rental Free</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_QuoteCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]_QuoteCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperatingTime__c</fullName>
        <description>Field is filled by declarative lookup rollup summary QuoteOperatingTime</description>
        <label>Operating Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceOfAction__c</fullName>
        <inlineHelpText>Ort, an dem der Einsatz stattfinden wird</inlineHelpText>
        <label>Place of Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreferredCity__c</fullName>
        <inlineHelpText>definiert das Einsatzgebiet nach einem Ort in Kombination mit dem Feld “Umkreis in km”</inlineHelpText>
        <label>Preferred City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAddress__c</fullName>
        <formula>Opportunity.Account.ContractStreet__c + &quot;, &quot; +
Opportunity.Account.ContractPostalCode__c + &quot;, &quot; +
Opportunity.Account.ContractCity__c + &quot;, &quot; +
TEXT(Opportunity.Account.ContractCountry__c)  + &quot;, &quot; +
Opportunity.Account.ContractAddressCo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>die im Account hinterlegte Vertragsanschrift des Kunden</inlineHelpText>
        <label>Contract Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalAuthority__c</fullName>
        <description>Formula shows final authority from account of related opportunity</description>
        <formula>TEXT(Opportunity.Account.FinalAuthority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>referenziert das Feld “Abschlussvollmacht” des Kunden Accounts</inlineHelpText>
        <label>Final Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <formula>IF(ISBLANK(Person_Account__r.MailingAddressCo__c),&quot;&quot;,Person_Account__r.MailingAddressCo__c + &quot;, &quot;) +
Person_Account__r.PersonContact.MailingStreet + &quot;, &quot; +
Person_Account__r.PersonContact.MailingPostalCode + &quot;, &quot; +
Person_Account__r.PersonContact.MailingCity + &quot;, &quot; +
Person_Account__r.PersonContact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>gibt die Postanschrift der Person wieder, mit dem der Vertrag geschlossen werden soll</inlineHelpText>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Days__c</fullName>
        <description>This fields the operating days for a quote. It is needed for the contract management in Landwehr.
Robin S. 14.10.2019</description>
        <label>Operating Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name der Person, mit der ein Vertrag geschlossen werden soll</inlineHelpText>
        <label>Person Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Doctor, Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <inlineHelpText>Information für die Vertragsabteilung, wie der Vertrag versendet werden soll.</inlineHelpText>
        <label>Shipping method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Quote_Number__c</fullName>
        <description>This field is used for the Enhanced Lightning Grid app, to display the quote number as a link in a related list.</description>
        <formula>HYPERLINK(&apos;/lightning/r/&apos;&amp;Id&amp;&apos;/view&apos;, QuoteNumber, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>doctari_client__c</fullName>
        <description>Is needed for Landwehr.
Robin S. 14.10.2019</description>
        <label>doctari client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>doctari Fachpflege GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari Pflege ANÜ GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari Ärzte ANÜ GmbH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Betrag_Personal__c</fullName>
        <label>Amount personal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LandlordDoctors__c</fullName>
        <inlineHelpText>zeigt den auf dem Kunden-Account hinterlegten Hausbesitzer Ärzte an</inlineHelpText>
        <label>Landlord Doctors</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>limitation_type__c</fullName>
        <inlineHelpText>Art der Befristung</inlineHelpText>
        <label>limitation type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FurtherEducation__c</fullName>
        <label>Further Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Opportunity.Account.ShippingStreet + &quot;, &quot; +
Opportunity.Account.ShippingPostalCode + &quot;, &quot; +
Opportunity.Account.ShippingCity + &quot;, &quot; +
Opportunity.Account.ShippingCountry &amp; BR() &amp;
Opportunity.Account.ShippingAddressCo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>die im Account hinterlegte Hausanschrift des Kunden</inlineHelpText>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>amendment agreement</fullName>
                </value>
                <value>
                    <fullName>Contract extension</fullName>
                </value>
                <value>
                    <fullName>Limitation reason</fullName>
                </value>
                <value>
                    <fullName>temporary without reason</fullName>
                </value>
                <value>
                    <fullName>temporary with reason</fullName>
                </value>
                <value>
                    <fullName>unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsedFromContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Referenz zum Hauptvertrag; wird bei Vertragsänderungen automatisch ausgefüllt</inlineHelpText>
        <label>Used From Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactDepartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Department</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LandlordCaregiver__c</fullName>
        <inlineHelpText>zeigt den auf dem Kunden-Account hinterlegten Hausbesitzer Pflege an</inlineHelpText>
        <label>Landlord Caregiver</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inhaber des verknüpften Opportunity Datensatzes</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gross_monthly_fee__c</fullName>
        <description>Entering working hours per week and a hourly rate, will calculate that field</description>
        <formula>WorkingHoursPerYear__c * Hourly_rate__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Stundensatz * Arbeitsstunden pro Jahr / 12 Monate</inlineHelpText>
        <label>gross monthly fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmploymentContract__c</fullName>
        <label>Employment Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EmploymentContract</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RatioToFullTimeJob__c</fullName>
        <description>Ratio between working hours per year and a full time job ob 2090 hours</description>
        <formula>WorkingHoursPerYear__c / 2090</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>gibt das prozentuale Verhältnis zu einer 40-Stunden-Woche wieder</inlineHelpText>
        <label>Ratio to full-time job</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competence_Personal__c</fullName>
        <formula>IF(ISBLANK(Person_Account__r.T_Doctor_Job__c ), Person_Account__r.Caregiver_Job__c ,Person_Account__r.T_Doctor_Job__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referenz zur hinterlegten Kompetenz der Person</inlineHelpText>
        <label>Competence Personal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkingHoursPerWeek__c</fullName>
        <inlineHelpText>Gesamtanzahl der Arbeitsstunden pro Woche</inlineHelpText>
        <label>working hours per week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkingHoursPerYear__c</fullName>
        <formula>WorkingHoursPerWeek__c * 52.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Arbeitsstunden pro Woche * 52,25</inlineHelpText>
        <label>Working hours per year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPersonalAddress__c</fullName>
        <inlineHelpText>hier kann eine alternative Adresse zum Feld “Adresse Personal” hinterlegt werden</inlineHelpText>
        <label>Other Personal Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestedStateCanton__c</fullName>
        <inlineHelpText>definiert das Einsatzgebiet nach Bundesländern</inlineHelpText>
        <label>Requested State Canton</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RequestedStateCanton</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentOperationCheck__c</fullName>
        <label>Comment Operation Check</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LatestContractEndDate__c</fullName>
        <description>This field is filled by declarative lookup rollup summary QuoteLatestContractEndDate</description>
        <label>Latest Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QualificationPersonal__c</fullName>
        <formula>IF(ISBLANK( Opportunity.T_Caregiver_Job__c ), Opportunity.T_Doctor_Job__c ,Opportunity.T_Caregiver_Job__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referenz zur hinterlegten Qualifikation der verknüpften Opportunity</inlineHelpText>
        <label>Qualification Personal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_area_in_facility__c</fullName>
        <inlineHelpText>beschreibt die Tätigkeit, für die die Person eingesetzt werden soll</inlineHelpText>
        <label>Work area (in facility)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPersonEmployees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ansprechpartner des Kunden für den Bereich Personal</inlineHelpText>
        <label>Contact Person Employees</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Contact Person Employees)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_Operating_Time_Days__c</fullName>
        <formula>LatestContractEndDate__c -  EarliestContractStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Operating Time Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>working_hours_per_month__c</fullName>
        <description>The working hours per year are divided through 12 months to calculate the hours per month</description>
        <formula>WorkingHoursPerYear__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Arbeitsstunden pro Jahr / 12 Monate</inlineHelpText>
        <label>working hours per month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommentSendingInformation__c</fullName>
        <inlineHelpText>Zusätzliche Informationen über den Versand für die Vertragsabteilung</inlineHelpText>
        <label>Comment Sending Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EarliestContractStartDate__c</fullName>
        <description>This field is filled by declarative lookup rollup summary QuoteEarliestContractStartDate</description>
        <label>Earliest Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommentContractInformation__c</fullName>
        <inlineHelpText>Zusätzliche Informationen, die der Vertragsabteilung mitgeteilt werden sollen</inlineHelpText>
        <label>Comment Contract Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Creation_of_contract_Employee__c</fullName>
        <inlineHelpText>Art des Vertrages</inlineHelpText>
        <label>Creation of contract Personal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbeitsvertrag Fachpfleger</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag Arbeitsvertrag Fachpfleger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmploymentContractAnnex2Salary__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Vergütung und Abrechnungsmodus</inlineHelpText>
        <label>Employment Contract Annex 2 Salary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactPersonForContractShipping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ansprechpartner des Kunden für den Bereich Vertragsversand</inlineHelpText>
        <label>Contact person for contract shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Contact person for contract shipping)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>differentShippingAddressCustomer__c</fullName>
        <description>sfc-3270</description>
        <inlineHelpText>Diese Adresse wird nicht für den Vertrag verwendet, sondern nur für das Anschreiben.</inlineHelpText>
        <label>different shipping address (Customer)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>differentShippingAddressPersonal__c</fullName>
        <description>sfc3270</description>
        <inlineHelpText>Diese Adresse wird nicht für den Vertrag verwendet, sondern nur für das Anschreiben.</inlineHelpText>
        <label>different shipping address (Personal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appendix3EssentialWorkingConditions__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Wesentliche Arbeitsbedingungen (kundenseitig)</inlineHelpText>
        <label>Appendix 3 Essential Working Conditions</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_contract</fullName>
        <active>true</active>
        <label>Employment contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_with_Contract_AV</fullName>
        <active>true</active>
        <label>Quote with Contract (Arbeitsvertrag)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_with_Contract_EV</fullName>
        <active>true</active>
        <label>Quote with Contract (Einsatzvertrag)</label>
    </recordTypes>
    <validationRules>
        <fullName>EmploymentMandatoryLocal</fullName>
        <active>true</active>
        <description>Rather City or State information need to be entered for employment contracts</description>
        <errorConditionFormula>(
ISPICKVAL(Creation_of_contract_Employee__c,&quot;Arbeitsvertrag Fachpfleger&quot;)
&amp;&amp;
NOT(ISNEW())
)
&amp;&amp;
(
(ISBLANK(RequestedStateCanton__c) &amp;&amp; ISBLANK(PreferredCity__c))
||
(ISBLANK(PreferredCity__c) &amp;&amp; NOT(ISPICKVAL(Radiuskm__c,&quot;&quot;)))
||
(NOT(ISBLANK(PreferredCity__c)) &amp;&amp; ISPICKVAL(Radiuskm__c,&quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Es muss ein Einsatzgebiet definiert werden. Zudem benötigt die Ortsangabe einen Umkreis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RatioToFullTimeJobUnder75Percent</fullName>
        <active>true</active>
        <description>Certain fields can not be selected when ratio to full time job is lower than 75 percent.</description>
        <errorConditionFormula>RatioToFullTimeJob__c &lt; 0.75  &amp;&amp; ( BC_100__c = true  ||  Company_car__c = true)</errorConditionFormula>
        <errorMessage>BahnCard 100 or company car can not be selected when the ratio to a full time job is less than 75 percent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactPersonForContractShippingRequired</fullName>
        <active>true</active>
        <description>sfc-3559</description>
        <errorConditionFormula>IF( TEXT(Status) = &apos;Transferred to contract&apos; &amp;&amp;  ISBLANK(ContactPersonEmployees__c) , true, false)</errorConditionFormula>
        <errorMessage>Bitte befülle das Feld &quot;Ansprechpartner für Vertragsversand&quot; auf dem Reiter &quot;Details&quot;, bevor der Vertrag nach Landwehr geschickt werden kann.</errorMessage>
    </validationRules>
</CustomObject>